fix(DESP-858): collection cards font cut off on firefox

--- a/Frontend/src/app/core-ui-module/components/list-table/list-table.component.scss
+++ b/Frontend/src/app/core-ui-module/components/list-table/list-table.component.scss
@@ -761,7 +761,7 @@ $badgeWidth: 250px;
     left: 5px;
 }
 .rowInner {
-    max-height: 1.5em;
+    max-height: 1.6em;
     overflow: hidden;
     flex-grow: 1;
 }
@@ -794,7 +794,7 @@ a.rowInner {
       font-size: 110%;
 
       .rowInner {
-          @include limitLineCount(2, 1.25);
+          @include limitLineCount(2, 1.4);
           justify-content: center;
           /*display: flex;
           justify-content: center;
@@ -993,7 +993,7 @@ a.rowInner {
 }
 .cardList .row_2 .rowInner,
 .cardList .row_3 .rowInner {
-    max-height: 1.5em;
+    max-height: 1.6em;
 }
 .cardList .row_2,
 .cardList .row_3,
